# jsonshiatsu

./: .gitattributes  .gitignore  .pre-commit-config.yaml  EXAMPLE_MIGRATION.md  README.md  REGEX_MIGRATION_GUIDE.md  REGEX_QUICK_REFERENCE.md  REGEX_TIMEOUT_DESIGN.md  REGEX_TIMEOUT_SUMMARY.md  flake.nix  pyproject.toml  release.sh  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  lint.yml  python-publish.yml  test.yml  trivy.yml
docs/: .gitignore  EDGE_CASES_EXPANSION.md  NIX_DEVELOPMENT.md  PARTIAL_ERROR_PARSING.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  TEST_COVERAGE_ANALYSIS.md  UNICODE_IEEE754_ANALYSIS.md
examples/: README.md  comprehensive_demo.py  demo.py  error_demo.py  malformed_demo.py  partial_parsing_demo.py  security_demo.py  streaming_demo.py  ultimate_malformed_example.py
jsonshiatsu/: __init__.py
jsonshiatsu/core/: __init__.py  array_object_handler.py  constants.py  data_type_processor.py  engine.py  error_handling.py  interfaces.py  javascript_handler.py  parser_base.py  regex_engine.py  regex_utils.py  strategies.py  string_preprocessors.py  tokenizer.py  transformer.py  transformer_test.py
jsonshiatsu/performance/: __init__.py  fast_engine.py  fast_streaming.py  fast_tokenizer.py  fast_transformer.py
jsonshiatsu/preprocessing/: __init__.py  base.py  extractors.py  handlers.py  normalizers.py  pipeline.py  repairers.py  string_utils.py
jsonshiatsu/recovery/: __init__.py  _exports.py  strategies.py
jsonshiatsu/recovery/core/: __init__.py  tracker.py
jsonshiatsu/security/: __init__.py  exceptions.py  limits.py
jsonshiatsu/streaming/: __init__.py  processor.py
jsonshiatsu/utils/: __init__.py  cli.py  config.py
tests/integration/: __init__.py  test_comprehensive_edge_cases.py  test_function_calls.py  test_ieee754_edge_cases.py  test_json_compatibility.py  test_malformed_json.py  test_new_examples2_integration.py  test_production_cases.py  test_unicode_comprehensive.py
tests/unit/: __init__.py
tests/unit/core/: __init__.py  test_array_object_handler.py  test_data_type_processor.py  (+10 more)
(+8 files in other folders)
