[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonshiatsu"
version = "0.1.0"
description = "A therapeutic JSON parser that gently massages malformed JSON into shape"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "jsonshiatsu Contributors"},
]
keywords = ["json", "parser", "therapeutic", "massage", "malformed", "resilient", "shiatsu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.812",
]

[project.urls]
Homepage = "https://github.com/JostBrand/jsonshiatsu"
Repository = "https://github.com/JostBrand/jsonshiatsu.git"
Issues = "https://github.com/JostBrand/jsonshiatsu/issues"

[tool.black]
line-length = 88
target-version = ['py37']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
packages = ["jsonshiatsu"]

[tool.setuptools.package-data]
jsonshiatsu = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = [
    "flake.nix",
    "shell.nix", 
    ".envrc",
    "flake.lock",
    ".direnv/*",
    "result*",
    "*.prof",
    "*.pstats",
    "NIX_DEVELOPMENT.md"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
